--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>HBNB</title>
-  </head>
-  <body>
-    <h1>States</h1>
-    <ul>
-      {% for key, val in states.items() %}
-      <li>{{ val.id }}: <b>{{ val.name }}</b></li>
-      {% endfor %}
-    </ul>
-  </body>
-</html>
+<HTML lang="en">
+    <HEAD>
+        <TITLE>HBNB</TITLE>
+    </HEAD>
+    <BODY>
+        <H1>States</H1>
+        <UL>
+          {% for key, val in states.items() %}
+            <li>{{ val.id }}: <b>{{ val.name }}</b></li>
+          {% endfor %}
+        </UL>
+    </BODY>
+</HTML>
