--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,8 +6,8 @@
     <BODY>
         <H1>States</H1>
         <UL>
-          {% for key, val in states.items() %}
-            <li>{{ val.id }}: <b>{{ val.name }}</b></li>
+          {% for val in states %}
+          <li>{{ val.id }}: <b>{{ val.name }}</b></li>
           {% endfor %}
         </UL>
     </BODY>
