--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -6,15 +6,14 @@
     <BODY>
         <H1>States</H1>
         <UL>
-            {% for key, state in states.items()|sort(attriBute="name") %}
-            <LI>
-                {{ state.id }}: <B>{{ state.name }}</B>
-                <UL>
-                {% for city in state.cities|sort(attriBute="name") %}
-                <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-                {% endfor %}
-                </UL>
-            </LI>
+            {% for key, state in states.items()|sort(attribute="name") %}
+                <LI>{{ state.id }}: <B>{{ state.name }}</B>
+                    <UL>
+                    {% for city in state.cities|sort(attribute="name") %}
+                        <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                    {% endfor %}
+                    </UL>
+                </LI>
             {% endfor %}
         </UL>
     </BODY>
