--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -5,21 +5,29 @@
     </HEAD>
     <BODY>
         {% if id == True %}
-        <H1>State: {{ state }}</H1>
-        <H3>Cities:</H3>
+            {% if cities != False %}
+                <H1>State: {{ state }}</H1>
+                <H3>Cities:</H3>
+            {% else %}
+                <H1>Not found!</H1>
+            {% endif %}
         {% else %}
         <H1>States</H1>
         {% endif %}
-        <UL>
-            {% if id == True %}
+        {% if id == True %}
+            {% if cities != False %}
+            <UL>
                 {% for city in cities|sort(attribute="name") %}
                     <LI>{{ city.id }}: <B>{{ city.name }}</B>
                 {% endfor %}
-            {% else %}
-                {% for state in states.values()|sort(attribute="name") %}
-                    <LI>{{ state.id }}: <B>{{ state.name }}</B>
-                {% endfor %}
+            </UL>
             {% endif %}
-        </UL>
+        {% else %}
+            <UL>
+            {% for state in states.values()|sort(attribute="name") %}
+                <LI>{{ state.id }}: <B>{{ state.name }}</B>
+            {% endfor %}
+            </UL>
+        {% endif %}
     </BODY>
 </HTML>
